# BOREAS

./: .gitignore  Flow_solutions.py  Fractionation_Class.py  LICENSE  Main.ipynb  Main.py  Mass_Loss_Class.py  Mdot_calculation.ipynb  Misc_Class.py  Model_Data_Loader.py  Original_James_EL_iso_sol_HD209458b.ipynb  Parameters.py  Plots.ipynb  README.md  Results_Handler.py  Star_Parameters.py  Star_Parameters_Class.py  Water_calculations.ipynb  mass_loss_functions.py  params.py  planet_params.json  pyproject.toml
Functions/: Flow_Solutions_Class.py  Fractionation_Class.py  Mass_Loss_Class.py  Model_Data_Loader.py
Planet_results/: HAT-P-67 b 2024 (low FXUV).csv  HAT-P-67 b 2024.csv  HAT-P-67 b 2025 (low FXUV).csv  HAT-P-67 b 2025.csv
PythonClassTest/: main.py  mass_loss_functions.py  mclass.py
examples/: run_single_planet.ipynb  run_single_planet.py
examples/configs/: k2-18b.toml  my_planet.toml
plots/: T-FXUV.csv  __init__.py  mrcode_models.ipynb  plot_H2O_paper.ipynb  plot_momentum_functions.ipynb  plots.py
plots/old_oxygen_left_behind/: Plots.ipynb  Results_Handler.py
src/boreas/: __init__.py  config.py  fractionation.py  mass_loss.py  parameters.py
src/boreas/data/: __init__.py  planet_params.json
tests/: test_choose_light_and_heavy_major.py  test_consistency_benchmark.py  test_fractionation_units.py
