[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "boreas"
version = "0.1.0"
description = "Hydrodynamic mass loss with multi-species fractionation."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "M. Valatsou"}]
dependencies = ["numpy>=1.22", "scipy>=1.9", "tomli>=2.0; python_version<'3.11'"]

[project.urls]
Homepage = "https://github.com/ExoInteriors/BOREAS"
Issues   = "https://github.com/ExoInteriors/BOREAS/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/boreas"]

[tool.hatch.build.targets.sdist]
include = ["src/boreas/**", "README.md"]